fix: 예약 가능한 시간 조회 fake dao 수정