@@ -4,12 +4,9 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 import roomescape.reservation.Reservation;
 import roomescape.reservationtime.ReservationTime;
 
@@ -69,16 +66,14 @@ public class FakeReservationDao implements ReservationDao {
                 new ReservationTime(2L, LocalTime.of(11, 0))
         );
 
-        Set<Long> reservedTimeIds = fakeReservations.stream()
+        List<ReservationTime> nonAvailableReservations = fakeReservations.stream()
                 .filter(reservation -> reservation.getDate().equals(date))
                 .filter(reservation -> reservation.getTheme().getId().equals(themeId))
-                .map(reservation -> reservation.getReservationTime().getId())
-                .collect(Collectors.toSet());
+                .map(reservation -> reservation.getReservationTime())
+                .toList();
 
         return allTimes.stream()
-                .filter(time -> !reservedTimeIds.contains(time.getId()))
-                .sorted(Comparator.comparing(reservationTime -> reservationTime.getStartAt()))
-                .collect(Collectors.toList());
-
+                .filter(t -> !nonAvailableReservations.contains(t))
+                .toList();
     }
 }
